--- a/index.html
+++ b/index.html
@@ -80,8 +80,26 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="" alt="">
+                    <img src="./images/img.jpg" alt="І-ый член команды" width="270">
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
                 </li>
+                <li>
+                    <img src="./images/img (1).jpg" alt="ІІ-ой член команды" width="270">
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/img (2).jpg" alt="ІІІ-ий член команды" width="270">
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img (3).jpg" alt="ІV-ый член команды" width="270">
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
+                </li>
+
             </ul>
         </section>
     </main>
