--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <!-- Шапка сайта -->
    <header>
        <nav>
-            <a href="">
-                <img src="./images/WebStudio.svg" alt="Логотип">
-            </a>
+            <a href=""><span>Web</span>Studio</a>
             <ul>
                 <li>
                     <a href="">Студия</a>
@@ -23,20 +21,22 @@
                     <a href="">Контакты</a>
                 </li>
             </ul>
+        </nav>
             <ul>
-                <li>info@devstudio.com</li>
+                <li>
+                    <a href="">info@devstudio.com</a>
+                </li>
                 <li>+38 096 111 11 11</li>
             </ul>
-       </nav>
    </header>
     <main>
+        <!-- Герой -->
         <section>
-            <!-- Герой -->
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <a href="">Заказать услугу</a>
+            <button type="button">Заказать услугу</button>
         </section>
+        <!-- Преимущества -->
         <section>
-            <!-- Преимущества -->
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -56,46 +56,48 @@
                 </li>
             </ul>
         </section>
+        <!-- Услуги компании -->
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
                     <a href="">
-                        <img src="./images/box 1.jpg" alt="Фото_1" width="370">
+                        <img src="./images/box1.jpg" alt="Фото1" width="370">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/box 2.jpg" alt="Фото_2" width="370">
+                        <img src="./images/box2.jpg" alt="Фото2" width="370">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/box 3.jpg" alt="Фото_3" width="370">
+                        <img src="./images/box3.jpg" alt="Фото3" width="370">
                     </a>
                 </li>
             </ul>
         </section>
+        <!-- Работники компании -->
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/img.jpg" alt="І-ый член команды" width="270">
+                    <img src="./images/img1.jpg" alt="І член команды" width="270">
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/img (1).jpg" alt="ІІ-ой член команды" width="270">
+                    <img src="./images/img2.jpg" alt="ІІ член команды" width="270">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/img (2).jpg" alt="ІІІ-ий член команды" width="270">
+                    <img src="./images/img3.jpg" alt="ІІІ член команды" width="270">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img (3).jpg" alt="ІV-ый член команды" width="270">
+                    <img src="./images/img4.jpg" alt="ІV член команды" width="270">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
@@ -103,8 +105,14 @@
             </ul>
         </section>
     </main>
+<!-- Подвал -->
     <footer>
-        
+        <a href=""><span>Web</span>Studio</a>
+        <address>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <p>info@example.com</p>
+            <p>+38 099 111 11 11</p>
+        </address>
     </footer>
 </body>
 </html>
